# pacioli

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  LICENSE.txt  README.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml
completions/: pacioli-complete.bash  pacioli-complete.zsh
man/: README.md  pacioli.1
pacioli/: balance_sheet.py  balance_sheet.tex  cli.py  config.py  finance_reports.py  income_statement.py  pacioli.py
src/pacioli/: __init__.py  balance_sheet.py  cash_flow_statement.py  cli.py  config.py  income_statement.py  pacioli.py  utils.py
src/pacioli/examples/: README.md  config.yml
tests/: sample_config.yml  test_balance_sheet.py  test_cash_flow_statement.py  test_cli.py  test_completions.py  test_config.py  test_income_statement.py  test_pacioli.py  test_utils.py
tests/resources/: balance_sheet.tex  commodity_config.yml  commodity_config_no_market.yml  commodity_ledger.ldg  sample_config.yml  sample_config_pending.yml  sample_ledger.ldg  test_balance_sheet.tex  test_cash_flow_statement.tex  test_income_sheet.tex
tests/resources/pacioli/: config.yml
