[tool.poetry]
name = "pacioli"
version = "0.3.1"
description = ""
authors = ["Jason Paris <paris3200@gmail.com>"]

[tool.poetry.scripts]
pacioli = "pacioli.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3.1"
jinja2 = "^2.11.2"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
pre-commit = "^2.2.0"
pytest-cov = "^2.10.1"
nox-poetry = "^0.8.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
