[project]
name = "pacioli"
version = "0.4.0"
description = "Beautiful report creation for plain text accounting"
authors = [
    {name = "Jason Paris", email = "paris3200@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "accounting",
    "finance",
    "ledger",
    "ledger-cli",
    "plain-text-accounting",
    "financial-reports",
    "balance-sheet",
    "income-statement",
    "cash-flow",
    "latex",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "pyyaml>=6.0.2",
    "jinja2>=3.1.6",
    "click>=8.1.0",
]

[project.scripts]
pacioli = "pacioli.cli:cli"

[project.urls]
Homepage = "https://github.com/paris3200/pacioli"
Repository = "https://github.com/paris3200/pacioli"
Issues = "https://github.com/paris3200/pacioli/issues"

[tool.poetry]
packages = [{include = "pacioli", from = "src"}]
include = [
    "src/pacioli/examples/**/*",
    "man/pacioli.1",
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
flake8 = "^7.1.0"
flake8-black = "^0.3.6"
flake8-docstrings = "^1.7.0"
pre-commit = "^4.0.0"
nox = "^2024.4.15"
nox-poetry = "^1.0.3"
types-PyYAML = "^6.0.12"
mypy = "^1.13.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --cov=pacioli --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
